--- a/templates/band/index.html
+++ b/templates/band/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Yoyo</title>
-    <link rel="stylesheet" type="text/css" href="{% static "test.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "band/css/test.css" %}">
 </head>
 <body>
 {% if bands %}
     {% for band in bands %}
-    <p>{{ band.name }}</p>
+    <a href="{% url 'band:detail' band.pk %}">{{ band.name }}</a>
     {% endfor %}
 {% else %}
     <p>Empty</p>
