--- a/concert/templates/concert/index.html
+++ b/concert/templates/concert/index.html
@@ -1,4 +1,3 @@
-{% extends base_html %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,23 @@
     <title>Concert</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Concerts</h1>
+    <table>
+        <tr>
+            <td>Concert name:</td>
+            <td>Band:</td>
+            <td>Time:</td>
+            <td>Stage:</td>
+        </tr>
+        {% for concert in concert_list %}
+        <tr>
+            <td>{{ concert.name }}</td>
+            <td>{{ concert.band }}</td>
+            <td>{{ concert.time }}</td>
+            <td>{{ concert.stage }}</td>
+        </tr>
+        {% endfor %}
+    </table>
     <p>{{ concert.name }}</p>
 </body>
 </html>
