--- a/templates/frontpage/index.html
+++ b/templates/frontpage/index.html
@@ -60,11 +60,11 @@
       <h1>Concerts</h1>
       <div class="test">
         <ul>
-          <li><a href="{% url 'frontpage:concert1' %}">Concert 20.07</a></li>
+          <li><a href="{% url 'frontpage:index' %}">Concert 20.07</a></li>
           <br>
-          <li><a href="{% url 'frontpage:concert2' %}">Concert 21.07</a></li>
+          <li><a href="{% url 'frontpage:index' %}">Concert 21.07</a></li>
           <br>
-          <li><a href="{% url 'frontpage:concert3' %}">Concert 22.07</a></li>
+          <li><a href="{% url 'frontpage:index' %}">Concert 22.07</a></li>
         </ul>
       </div>
 
