Felles base.html for alle apps, litt meir info i concert.

--- a/templates/concert/my_concerts.html
+++ b/templates/concert/my_concerts.html
@@ -1,10 +1,13 @@
-{% extends 'concert/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <h3>Oversikt over konserter</h3><br />
 <table>
   <tr>
     <th>
       Konsert
+    </th>
+    <th>
+      Band
     </th>
     <th>
       Scene
@@ -17,6 +20,9 @@
   <tr>
     <td>
       {{ concert.name }}
+    </td>
+    <td>
+      {{ concert.band.name }}
     </td>
     <td>
       {{ concert.stage }}
