--- a/templates/concert/splash.html
+++ b/templates/concert/splash.html
@@ -1,4 +1,4 @@
-{% extends 'concert/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <h3>Velkommen, {{ request.user.username }}!</h3><br />
 
