--- a/templates/frontpage/splash.html
+++ b/templates/frontpage/splash.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
+
+{% block title %}Studentfestival{% endblock %}
+
 {% block content %}
 <h3>Velkommen, {{ request.user.username }}!</h3><br />
-
 <p><a href="concert/concerts">Se konsertene du har ansvar for</a></p>
 {% if organiser %}
 <p><a href="concert/techs">Se teknikere på dine konserter</a></p>
 {% endif %}
-
 {% endblock %}
