--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
   	 WRITE CODE HERE
   	 ***************************************************************************************************************** -->
     <div id="headerwrap">
-      <div class="test">
+      <div class="content">
 	{% block content %}
 	{% endblock %}
       </div>
