--- a/templates/band/detail.html
+++ b/templates/band/detail.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{% if band.name %}{{ band.name }}{% else %}ERROR: Band has no name{% endif %}</title>
-</head>
-<body>
-<h1>{% if band.name %}{{ band.name }}{% else %}ERROR: Band has no name{% endif %}</h1>
-<h2> Manager: {% if band.manager %}{{ band.manager.username }}{% else %}Ingen{% endif %}</h2>
-{% if band.genres %}
-<h2>Genre</h2>
-<ul>
-    {% for genre in band.genres.all %}
-        <li>{{ genre.name }}</li>
-    {% endfor %}</ul>
-{% endif %}
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}{{ band.name }}{% endblock %}
+
+{% block content %}
+
+<div id="band-detail">
+    <img src="{% static 'band/images/bands' %}/{{ band.imageFilename }}" width="30%">
+    <div id="band-text">
+        <h1>{% if band.name %}{{ band.name }}{% else %}ERROR: Band has no name{% endif %}</h1>
+
+        <h2> Manager: {% if band.manager %}{{ band.manager.username }}{% else %}Ingen{% endif %}</h2>
+        {% if band.genres %}
+        <h2>Genre</h2>
+        <ul>
+            {% for genre in band.genres.all %}
+                <li>{{ genre.name }}</li>
+            {% endfor %}</ul>
+        {% endif %}
+    </div>
+</div>
+
+{% endblock %}
