Added app for manager

--- a/templates/concert/my_concerts.html
+++ b/templates/concert/my_concerts.html
@@ -15,6 +15,15 @@
     <th>
       Tidspunkt
     </th>
+  <!-- Usertypes:
+        Organiser: 1
+        Technician: 2
+        Manager: 3
+        Booker: 4 -->
+      {% if userType == 3 %}
+          Change needs
+      {% endif %}
+
   </tr>
   {% for concert in concerts %}
   <tr>
@@ -29,6 +38,9 @@
     </td>
     <td>
       {{ concert.time }}
+    </td>
+    <td>
+        <a href="#">Change</a>
     </td>
   </tr>
   {% endfor %}
