--- a/templates/concert/my_employments.html
+++ b/templates/concert/my_employments.html
@@ -36,6 +36,11 @@
     <td>
       {{ concert.concert.needs }}
     </td>
+    <td>
+      {% if userType == 3 %}
+
+      {% endif %}
+    </td>
   </tr>
   {% endfor %}
 </table>
