--- a/templates/concert/base.html
+++ b/templates/concert/base.html
@@ -47,7 +47,7 @@
         <div class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
             <li><a href="">Home</a></li>
-            <li><a href="">Log out</a></li>
+            <li><a href="/logout/">Log out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
