--- a/templates/band/detail.html
+++ b/templates/band/detail.html
@@ -5,18 +5,32 @@
 {% block content %}
 
 <div id="band-detail">
-    <img src="{% static 'band/images/bands' %}/{{ band.imageFilename }}" width="30%">
-    <div id="band-text">
-        <h1>{% if band.name %}{{ band.name }}{% else %}ERROR: Band has no name{% endif %}</h1>
-
-        <h2> Manager: {% if band.manager %}{{ band.manager.username }}{% else %}Ingen{% endif %}</h2>
-        {% if band.genres %}
-        <h2>Genre</h2>
-        <ul>
-            {% for genre in band.genres.all %}
-                <li>{{ genre.name }}</li>
-            {% endfor %}</ul>
-        {% endif %}
+    <img src="{% static 'band/images/bands' %}/{{ band.imageFilename }}" width="100%">
+    <div id="band-info">
+        <div class="left">
+            <h1>{% if band.name %}{{ band.name }}{% else %}ERROR: Band has no name{% endif %}</h1>
+            <p id="bio">{{ band.bioText }}</p>
+        </div>
+        <table class="right">
+            <tr>
+                <td>Manager:</td>
+                {% if band.manager %}
+                    {% if band.manager.first_name and band.manager.last_name %}
+                        <td>{{ band.manager.first_name }} {{ band.manager.last_name }}</td>
+                    {% else %}
+                        <td>{{ band.manager }}</td>
+                    {% endif %}
+                {% else %}
+                    <td>Ingen manager</td>
+                {% endif %}
+            </tr>
+            {% if band.genres %}
+                <tr>
+                    <td>Genre:</td>
+                    <td>{{ band.genres.all|join:', ' }}</td>
+                </tr>
+            {% endif %}
+        </table>
     </div>
 </div>
 
