add favicon to base-template

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,12 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/thefestival.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/thefestival.css' %}" rel="stylesheet">
+    <link href="{% static 'favicon.ico' %}" rel="icon">
+
     <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/the.js' %}"></script>
 
