--- a/templates/band/detail.html
+++ b/templates/band/detail.html
@@ -26,7 +26,7 @@
             </tr>
             {% if band.genres %}
                 <tr>
-                    <td>Sjanger:</td>git
+                    <td>Sjanger:</td>
                     <td>{{ band.genres.all|join:', ' }}</td>
                 </tr>
             {% endif %}
