--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,152 +29,153 @@
     <![endif]-->
 
     <script src="{% static 'js/modernizr.js' %}"></script>
-  </head>
+</head>
 
-  <body>
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+<body>
+<!-- Fixed navbar -->
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Studentfestival</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Studentfestival</a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/logout">Log out</a></li>
-          </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/logout">Log out</a></li>
+            </ul>
         </div><!--/.nav-collapse -->
-      </div>
+    </div>
+</div>
+
+<!-- *****************************************************************************************************************
+   WRITE CODE HERE
+   ***************************************************************************************************************** -->
+<div id="headerwrap">
+    <div class="content">
+        {% block content %}{% endblock %}
     </div>
 
-    <!-- *****************************************************************************************************************
-  	 WRITE CODE HERE
-  	 ***************************************************************************************************************** -->
-    <div id="headerwrap">
-      <div class="content">
-	{% block content %}
-	{% endblock %}
-      </div>
-
-    </div><!-- /headerwrap -->
+</div><!-- /headerwrap -->
 
 
-    <!-- *****************************************************************************************************************
-	 FOOTER
-	 ***************************************************************************************************************** -->
-    <div id="footerwrap">
-      <div class="container">
-	<div class="row">
-	  <div class="col-lg-4"></div>
-	  <div class="col-lg-4">
-	    <h4>Studentfestival</h4>
-	    <div class="hline-w"></div>
-	  </div>
-	  <div class="col-lg-4"></div>
+<!-- *****************************************************************************************************************
+ FOOTER
+ ***************************************************************************************************************** -->
+<div id="footerwrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                <h4>Studentfestival</h4>
+                <div class="hline-w"></div>
+            </div>
+            <div class="col-lg-4"></div>
 
-	</div><! --/row -->
-      </div><! --/container -->
-    </div><! --/footerwrap -->
+        </div>
+        <! --/row -->
+    </div>
+    <! --/container -->
+</div>
+<! --/footerwrap -->
 
-    <!-- Bootstrap core JavaScript
-	 ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/retina-1.1.0.js' %}"></script>
-    <script src="{% static 'js/jquery.hoverdir.js' %}"></script>
-    <script src="{% static 'js/jquery.hoverex.min.js' %}"></script>
-    <script src="{% static 'js/jquery.prettyPhoto.js' %}"></script>
-    <script src="{% static 'js/jquery.isotope.min.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
+<!-- Bootstrap core JavaScript
+ ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/retina-1.1.0.js' %}"></script>
+<script src="{% static 'js/jquery.hoverdir.js' %}"></script>
+<script src="{% static 'js/jquery.hoverex.min.js' %}"></script>
+<script src="{% static 'js/jquery.prettyPhoto.js' %}"></script>
+<script src="{% static 'js/jquery.isotope.min.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
 
 
-    <script>
-     // Portfolio
-     (function($) {
-       "use strict";
-       var $container = $('.portfolio'),
-	   $items = $container.find('.portfolio-item'),
-	   portfolioLayout = 'fitRows';
+<script>
+    // Portfolio
+    (function ($) {
+        "use strict";
+        var $container = $('.portfolio'),
+            $items = $container.find('.portfolio-item'),
+            portfolioLayout = 'fitRows';
 
-       if( $container.hasClass('portfolio-centered') ) {
-	 portfolioLayout = 'masonry';
-       }
+        if ($container.hasClass('portfolio-centered')) {
+            portfolioLayout = 'masonry';
+        }
 
-       $container.isotope({
-	 filter: '*',
-	 animationEngine: 'best-available',
-	 layoutMode: portfolioLayout,
-	 animationOptions: {
-	   duration: 750,
-	   easing: 'linear',
-	   queue: false
-	 },
-	 masonry: {
-	 }
-       }, refreshWaypoints());
+        $container.isotope({
+            filter: '*',
+            animationEngine: 'best-available',
+            layoutMode: portfolioLayout,
+            animationOptions: {
+                duration: 750,
+                easing: 'linear',
+                queue: false
+            },
+            masonry: {}
+        }, refreshWaypoints());
 
-       function refreshWaypoints() {
-	 setTimeout(function() {
-	 }, 1000);
-       }
+        function refreshWaypoints() {
+            setTimeout(function () {
+            }, 1000);
+        }
 
-       $('nav.portfolio-filter ul a').on('click', function() {
-	 var selector = $(this).attr('data-filter');
-	 $container.isotope({ filter: selector }, refreshWaypoints());
-	 $('nav.portfolio-filter ul a').removeClass('active');
-	 $(this).addClass('active');
-	 return false;
-       });
+        $('nav.portfolio-filter ul a').on('click', function () {
+            var selector = $(this).attr('data-filter');
+            $container.isotope({filter: selector}, refreshWaypoints());
+            $('nav.portfolio-filter ul a').removeClass('active');
+            $(this).addClass('active');
+            return false;
+        });
 
-       function getColumnNumber() {
-	 var winWidth = $(window).width(),
-	     columnNumber = 1;
+        function getColumnNumber() {
+            var winWidth = $(window).width(),
+                columnNumber = 1;
 
-	 if (winWidth > 1200) {
-	   columnNumber = 5;
-	 } else if (winWidth > 950) {
-	   columnNumber = 4;
-	 } else if (winWidth > 600) {
-	   columnNumber = 3;
-	 } else if (winWidth > 400) {
-	   columnNumber = 2;
-	 } else if (winWidth > 250) {
-	   columnNumber = 1;
-	 }
-	 return columnNumber;
-       }
+            if (winWidth > 1200) {
+                columnNumber = 5;
+            } else if (winWidth > 950) {
+                columnNumber = 4;
+            } else if (winWidth > 600) {
+                columnNumber = 3;
+            } else if (winWidth > 400) {
+                columnNumber = 2;
+            } else if (winWidth > 250) {
+                columnNumber = 1;
+            }
+            return columnNumber;
+        }
 
-       function setColumns() {
-	 var winWidth = $(window).width(),
-	     columnNumber = getColumnNumber(),
-	     itemWidth = Math.floor(winWidth / columnNumber);
+        function setColumns() {
+            var winWidth = $(window).width(),
+                columnNumber = getColumnNumber(),
+                itemWidth = Math.floor(winWidth / columnNumber);
 
-	 $container.find('.portfolio-item').each(function() {
-	   $(this).css( {
-	     width : itemWidth + 'px'
-	   });
-	 });
-       }
+            $container.find('.portfolio-item').each(function () {
+                $(this).css({
+                    width: itemWidth + 'px'
+                });
+            });
+        }
 
-       function setPortfolio() {
-	 setColumns();
-	 $container.isotope('reLayout');
-       }
+        function setPortfolio() {
+            setColumns();
+            $container.isotope('reLayout');
+        }
 
-       $container.imagesLoaded(function () {
-	 setPortfolio();
-       });
+        $container.imagesLoaded(function () {
+            setPortfolio();
+        });
 
-       $(window).on('resize', function () {
-	 setPortfolio();
-       });
-     })(jQuery);
-    </script>
-  </body>
+        $(window).on('resize', function () {
+            setPortfolio();
+        });
+    })(jQuery);
+</script>
+</body>
 </html>
