add button for booking band

--- a/templates/band/detail.html
+++ b/templates/band/detail.html
@@ -41,5 +41,8 @@
             </table>
         </div>
     </div>
+    <div id="band-buttons">
+        <a href="#" class="btn btn-primary">Book band</a>
+    </div>
 
 {% endblock %}
