--- a/templates/concert/manager.html
+++ b/templates/concert/manager.html
@@ -1,22 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h3> Oversikt over konserter for band du manager
-    <table>
-    <tr>
-        <th>Dato</th>
-        <th>Konsert</th>
-        <th>Band</th>
-        <th>Tekniske behov</th>
-    </tr>
-    {% for concert in concerts %}
-        <tr>
-            <td>{{ concert.time }}</td>
-            <td>{{ concert.name }}</td>
-            <td>{{ concert.band }}</td>
-            <td>{{ concert.needs }}</td>
-            <td><a href="{{ concert.link }}"> Edit </a></td>
-        </tr>
-    {% endfor %}
-
-    </table>
+    <div id="concert-container">
+    <h3> Oversikt over konserter for band du manager</h3>
+        <table>
+            <tr>
+                <th>Dato</th>
+                <th>Konsert</th>
+                <th>Band</th>
+                <th>Tekniske behov</th>
+                <th></th>
+            </tr>
+            {% for concert in concerts %}
+                <tr>
+                    <td>{{ concert.time }}</td>
+                    <td>{{ concert.name }}</td>
+                    <td>{{ concert.band }}</td>
+                    <td>{{ concert.needs }}</td>
+                    <td><a href="{{ concert.link }}"> Edit </a></td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock %}
