fix broken link

--- a/templates/frontpage/multiple_roles.html
+++ b/templates/frontpage/multiple_roles.html
@@ -3,23 +3,23 @@
 {% block title %}Studentfestival{% endblock %}
 
 {% block content %}
-<h3>Velkommen, {{ request.user.username }}!</h3><br />
+    <h3>Velkommen, {{ request.user.username }}!</h3><br/>
     <p>Du har flere roller i systemet. Under er linker hva du kan jobbe med.</p>
-{% if 'organiser' in roles %}
-    <h4>Arrangør:</h4>
-    <p><a href="/concert/concerts">Se kommende konserter</a></p>
-    <p><a href="/concert/techs">Se teknikere på konserter du organiserer</a></p>
-{% endif %}
-{% if 'head_booker' in roles %}
-    <h4>Bookingsjef:</h4>
-    <p><a href="/booking/offers">Gjennomgå tilbud</a></p>
-{% endif %}
-{% if 'manager' in roles %}
-    <h4>Manager:</h4>
-    <p><a href="/concert/manager">Se bands spillejobber og endre deres behov</a></p>
-{% endif %}
-{% if 'technician' in roles %}
-    <h4>Tekniker:</h4>
-    <p><a href="/concert/technicians">Se hvilke konserter du skal jobbe på</a></p>
-{% endif %}
+    {% if 'organiser' in roles %}
+        <h4>Arrangør:</h4>
+        <p><a href="/concert/concerts">Se kommende konserter</a></p>
+        <p><a href="/concert/technicians">Se teknikere på konserter du organiserer</a></p>
+    {% endif %}
+    {% if 'head_booker' in roles %}
+        <h4>Bookingsjef:</h4>
+        <p><a href="/booking/offers">Gjennomgå tilbud</a></p>
+    {% endif %}
+    {% if 'manager' in roles %}
+        <h4>Manager:</h4>
+        <p><a href="/concert/manager">Se bands spillejobber og endre deres behov</a></p>
+    {% endif %}
+    {% if 'technician' in roles %}
+        <h4>Tekniker:</h4>
+        <p><a href="/concert/technicians">Se hvilke konserter du skal jobbe på</a></p>
+    {% endif %}
 {% endblock %}
