--- a/templates/booking/send.html
+++ b/templates/booking/send.html
@@ -3,6 +3,16 @@
 
 {% endblock %}
 {% block content %}
+
+{% if band_collisions %}
+{% for c in band_collisions %}
+<p>{{c.band.name}} er opptatt mellom {{c.time}} og {{c.time_end}}</p>
+{% endfor %}
+{% for c in stage_collisions %}
+<p>{{c.stage}} er opptatt mellom {{c.preparation_start}} og {{c.takedown_end}}</p>
+{% endfor %}
+{% endif %}
+
 <form action="." method="post">
   {% csrf_token %}
   <table>
